Header logo cutoff fix

--- a/packages/govtnz-ds-website/src/components/header.scss
+++ b/packages/govtnz-ds-website/src/components/header.scss
@@ -33,10 +33,10 @@
   }
 
   @include medium {
-    max-width: 200px;
+    max-width: 230px;
   }
   @include large {
-    max-width: 228px;
+    max-width: 230px;
   }
 }
 
